chore: Update homepage URL in package.json and add project description in README.md

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app-react",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://no2ehi.github.io/simple-todo-app-react",
+  "homepage": "https://DhruvShah0612.github.io/simple-todo-app-react",
   "description": "",
   "main": "index.js",
   "dependencies": {
